# OpenGL_Study

./: .clang-format  .gitignore  CMakeLists.txt  Code style.md  Documentation writing guide.md  Documentation writing guide.txt  Readme.md
app/: CMakeLists.txt  main.cpp  multicoloredRectangle.cpp  multicoloredRectangle.h  renderer.cpp  renderer.h  sceneObject.cpp  sceneObject.h
docs/: CMakeLists.txt
include/: buffer.h  debugHelpers.h  exceptions.h  generalTypes.h  helpers.h  multicoloredRectangle.h  sceneObject.h  shaderHelpers.h  shaderProgram.h  texture.h  textureImpl.h  textureTypes.h  textureUnit.h  uniforms.h  vertexArray.h  vertexBuffer.h  vertexBufferLayout.h  vertexHelpers.h  window.h  windowHandlers.h
include/helpers/: debugHelpers.h  floats.h  helpers.h  macros.h  openglHelpers.h
include/mathCore/: base.h  baseMatrix.h  matrix.h  point.h  transformMatrix.h  vector.h
include/openglCore/: buffer.h  openglHelpers.h  openglLimits.h  shaderProgram.h  texture.h  textureTypes.h  textureUnit.h  uniforms.h  vertexArray.h  vertexBufferLayout.h  vertexTypes.h
include/renderer/: material.h  mesh.h  renderer.h  scene.h  sceneObject.h
libs/: CMakeLists.txt  glad.c  glfw3.lib
libs/include/: stb_image.h
libs/include/GLFW/: glfw3.h  glfw3native.h
libs/include/debugbreak/: debugbreak.h
libs/include/glad/KHR/: khrplatform.h
libs/include/glad/glad/: glad.h
resources/shaders/fs/: fragmentShader.frag
resources/shaders/vs/: vertexShader.vert  vertexShader.vs
shaders/fs/: fragmentShader.frag
shaders/vs/: vertexShader.vert
src/: CMakeLists.txt  buffer.cpp  debugHelpers.cpp  generalTypes.cpp  helpers.cpp  main.cpp  multicoloredRectangle.cpp  openglLimits.cpp  sceneObject.cpp  shaderHelpers.cpp  shaderProgram.cpp  texture.cpp  textureTypes.cpp  textureUnit.cpp  uniforms.cpp  vertexArray.cpp  vertexBuffer.cpp  vertexBufferLayout.cpp  vertexHelpers.cpp  window.cpp  windowHandlers.cpp
src/helpers/: CMakeLists.txt  debugHelpers.cpp  helpers.cpp  openglHelpers.cpp
src/mathCore/: CMakeLists.txt  base.cpp  matrix.cpp  transformMatrix.cpp  vector.cpp
src/openglCore/: CMakeLists.txt  buffer.cpp  bufferImpl.h  openglHelpers.cpp  openglHelpers.h  openglHelpersImpl.cpp  openglHelpersImpl.h  openglLimits.cpp  shaderProgram.cpp  shaderProgramImpl.h  texture.cpp  textureImpl.h  textureTypes.cpp  textureUnit.cpp  uniforms.cpp  uniformsImpl.h  vertexArray.cpp  vertexArrayImpl.h  vertexBufferLayout.cpp  vertexBufferLayoutImpl.h
src/renderer/: CMakeLists.txt  material.cpp  mesh.cpp  renderer.cpp  scene.cpp  sceneObject.cpp
