find_package(Doxygen)
if(Doxygen_FOUND)
    set(DOXYGEN_PROJECT_NAME "OpenGL Study")
    set(DOXYGEN_PROJECT_BRIEF "It is a study project to know basics of OpenGL.")
    set(DOXYGEN_OUTPUT_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/docs)
    set(DOXYGEN_EXTRACT_ALL YES)
    set(DOXYGEN_RECURSIVE YES)
    set(DOXYGEN_SOURCE_BROWSER YES)
    set(DOXYGEN_GENERATE_TREEVIEW YES)
    set(DOXYGEN_BUILTIN_STL_SUPPORT YES)
    set(DOXYGEN_EXTRACT_PRIVATE YES)
    set(DOXYGEN_EXTRACT_STATIC YES)
    set(DOXYGEN_EXTRACT_ANON_NSPACES YES)
    set(DOXYGEN_SHOW_GROUPED_MEMB_INC YES)
    set(DOXYGEN_INLINE_SOURCES YES)
    set(DOXYGEN_REFERENCED_BY_RELATION YES)
    set(DOXYGEN_REFERENCES_RELATION YES)
    set(DOXYGEN_CLASS_DIAGRAMS YES)
    set(DOXYGEN_DOT_NUM_THREADS 4)
    set(DOXYGEN_UML_LOOK YES)
    set(DOXYGEN_UML_LIMIT_NUM_FIELDS 0)
    set(DOXYGEN_TEMPLATE_RELATIONS YES)
    set(DOXYGEN_ENABLE_PREPROCESSING YES)
    set(DOXYGEN_MACRO_EXPANSION YES)

    doxygen_add_docs(OpenGL_Study_docs
        ${PROJECT_SOURCE_DIR}/src ${PROJECT_SOURCE_DIR}/include
        WORKING_DIRECTORY ${PROJECT_SOURCE_DIR}
        COMMENT "Generating API documentation with Doxygen")
else()
    message(STATUS "Doxygen not found, not building docs")
endif()
